kubernetes/middleware/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: middleware-namespace
  labels:
    name: middleware-namespace
