kubernetes/middleware/service-secure.yaml
apiVersion: v1
kind: Service
metadata:
  name: middleware-service-secure
spec:
  type: NodePort
  selector:
    app: middleware-application
  ports:
    - protocol: TCP
      port: 443
      targetPort: 4040
      name: https
