kubernetes/middleware/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: middleware-service
spec:
  type: NodePort
  selector:
    app: middleware-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4040
      name: http
